Fix alignment on menu toggle icon

--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -12,7 +12,6 @@
 
     #menu-toggle * {
         line-height  : 9px;
-        justify-self : center;
         cursor       : pointer;
     }
 
